2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: When sending logs, use NoPolicy. We've already
	checked if we can access the server or not. Using StreamingPolicy is
	wrong now that we create mms downloaders for those always. Also
	add a null check.

	r: alan

2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp:
	* enums.h|cpp: Remove MediaStateError, it's not used in SL2. Whenever
	an error occurs we go to the Closed state.

	r: sde

2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Accept rtsp[s] schemes too.

	* downloader.cpp: determine mms'ness by using the policy passed in
	instead of comparing schemes (differently in other places - the
	pipeline considers rtsp and rtsps schemes too as streaming).

	r: sde

2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: When we got a packet from the mms downloader, ask
	the demuxer to fill its buffers. This fixes some cases where the mms
	stream never finishes buffering. Added GetDemuxerReffed.

	r: spouliot

2009-10-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Don't completely stop working when the media is
	stopped, the media element needs the first frame of the media, so
	when stopped, buffer 1 frame instead of 0. Makes MS DRT #483 pass.

2009-10-29  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: Grid should not invalidate its measure unless
	  either the Columns or Rows collection changes. This reverts
	  what looks like an accidental commit by lewing in r123309.
	  r: jeff and toshok.

2009-10-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: If we Seek when Paused, we need to update
	paused_position. Fixes one error in MS DRT #483.

	r: spouliot

2009-10-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Media::SelectDemuxerAsync: seek to 0 on the source
	before searching for a demuxer. Makes #546241 play all the audio it
	should.

	r: alan
