@@ -1,5 +1,13 @@
 2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* pipeline.cpp|h: ProgressiveSource: close the write handle in the dtor
+	to avoid race conditions - media thread closing the handle and main
+	writing to it.
+
+	r: alan
+
+2009-11-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* mms-downloader.cpp: When sending logs, use NoPolicy. We've already
 	checked if we can access the server or not. Using StreamingPolicy is
 	wrong now that we create mms downloaders for those always. Also
